Fixed layout overflows

--- a/theme/styles/css/vtex.flex-layout.css
+++ b/theme/styles/css/vtex.flex-layout.css
@@ -20,6 +20,7 @@
 .flexRowContent--flex-2{
     margin-top: 5%;
     margin-bottom: 5%;
+    justify-content: space-around;
 }
 .flexRow--logo-phone{
     margin-top: 10%;
@@ -35,7 +36,7 @@
 }
 .flexColChild--form-desktop{
    position: relative;
-   right: -30%;
+   /* right: -30%; */
    width: 400px;
 }
 .flexRowContent--copyright{
