--- a/theme/styles/css/vtex.rich-text.css
+++ b/theme/styles/css/vtex.rich-text.css
@@ -15,7 +15,7 @@
   font-size: 26px;
   margin: 0;
   position: relative;
-  left: -20%;
+  /* left: -20%; */
 }
 .paragraph--text-mobile1, .paragraph--text-mobile2{
   margin: 0;
